QMimeDatabase: pass MatchMode down, to fix MatchContent.

Task-number: QTBUG-29702
Change-Id: I2f1538adbf8e7a5edfc4276585bf4ef04ce69874
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: f2e8a81227b3ee09afe1bf8a5d292e8c5f2ee67f https://github.com/qt/qtbase/commit/f2e8a81227b3ee09afe1bf8a5d292e8c5f2ee67f